--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -508,7 +508,7 @@ rule run_spgc:
         corr_thresh=0.4,
     shell:
         """
-        spgc run --full-output \
+        spgc run \
              --trim-frac-species-genes {params.trim_frac_species_genes} \
              --species-free-thresh {params.species_free_thresh} \
              --depth-ratio-thresh {params.depth_ratio_thresh} \
